RESOLVED FIXED 37843
[DRT/Chromium] Fix some unexpected results of editing
https://bugs.webkit.org/show_bug.cgi?id=37843
Summary [DRT/Chromium] Fix some unexpected results of editing
Kent Tamura
Reported 2010-04-19 23:53:39 PDT
[DRT/Chromium] Fix some unexpected results of editing
Attachments
Patch (1.28 KB, patch)
2010-04-19 23:55 PDT, Kent Tamura
hamaji: review+
Kent Tamura
Comment 1 2010-04-19 23:55:53 PDT
Shinichiro Hamaji
Comment 2 2010-04-20 00:06:09 PDT
Comment on attachment 53777 [details] Patch Looks good! Side note: the corresponding file seems to be src/webkit/tools/test_shell/test_webview_delegate.cc in chromium's tree. We have only one startContainer call in the chromium's code so this would be just a typo. By the way, I think it's nice to have this kind of info in ChangeLog. Could you update the ChangeLog before you land?
Kent Tamura
Comment 3 2010-04-20 00:08:52 PDT
(In reply to comment #2) > (From update of attachment 53777 [details]) > Looks good! > > Side note: the corresponding file seems to be > src/webkit/tools/test_shell/test_webview_delegate.cc in chromium's tree. We > have only one startContainer call in the chromium's code so this would be just > a typo. > > By the way, I think it's nice to have this kind of info in ChangeLog. Could you > update the ChangeLog before you land? Right. This was my failure during porting test_webview_delegate.cc. I'll update the ChangeLog.
Kent Tamura
Comment 4 2010-04-20 00:15:20 PDT
Note You need to log in before you can comment on or make changes to this bug.